commit(Advanced search): searching for publications in the external services (G-links and europe pubmed central)
