# agrold_webapp/src/java/agrold/rest/api/sparqlaccess/GeneDAO.java
@@ -40,19 +40,22 @@ public class GeneDAO {
 
         String sparqlQuery = "BASE <http://www.southgreen.fr/agrold/>\n"
                 + "PREFIX rdf:<http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n"
-                + "PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#>\n"                
+                + "PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#>\n"
                 + "PREFIX vocab:<vocabulary/>\n"
                 + "PREFIX graph:<gramene.cyc>\n"
-                + "PREFIX pathway:<biocyc.pathway/"+pathwayId+">\n"
-                + "\n"
-                + "SELECT DISTINCT ?geneId ?name ?taxon_name (?gene AS ?URI)\n"
+                + "PREFIX taxonGraph:<ncbitaxon>\n"
+                + "PREFIX pathway:<biocyc.pathway/" + pathwayId + ">\n"
+                + "SELECT DISTINCT ?geneId ?gene_name ?taxon (str(?taxon_name) AS ?taxon_name) (?gene AS ?URI)\n"
                 + "WHERE {\n"
-                + " GRAPH graph: {\n"
-                + "  ?gene vocab:is_agent_in pathway:. \n"
-                + "  ?gene rdfs:label ?name.\n"
-                + "  ?gene vocab:taxon ?taxon_name.\n"
+                + "  GRAPH graph: {\n"
+                + "    ?gene vocab:is_agent_in pathway:.\n"
+                + "    ?gene rdfs:label ?gene_name.\n"
+                + "    ?gene vocab:taxon ?taxon.\n"
                 + "    BIND(REPLACE(str(?gene), '^.*(#|/)', \"\") AS ?geneId) .\n"
-                + " }\n"
+                + "  }\n"
+                + "  GRAPH taxonGraph:{\n"
+                + "    ?taxon rdfs:label ?taxon_name.\n"
+                + "  }\n"
                 + "}";
         sparqlQuery = APILib.addLimitAndOffset(sparqlQuery, pageSize, page);
         System.out.println(sparqlQuery);
