# agrold_webapp/src/java/agrold/rest/api/sparqlaccess/PredicateDAO.java
@@ -5,11 +5,6 @@
  */
 package agrold.rest.api.sparqlaccess;
 
-import com.hp.hpl.jena.query.QuerySolution;
-import com.hp.hpl.jena.query.ResultSet;
-import java.util.ArrayList;
-import java.util.List;
-
 /**
  *
  * @author tagny
@@ -17,29 +12,30 @@ import java.util.List;
 public class PredicateDAO {
 
     /**
-     *  What predicates are in AgroLD?
+     * What predicates are in AgroLD?
+     *
      * @return the list of URIs of predicates
      */
-    public List<Predicate> getAllPredicates() {
-        List<Predicate> predicates;
-        predicates = new ArrayList<>();
-        Predicate predicate;
+    public static String getPredicates(String graphLocalName, int page, int pageSize, String resultFormat) {
+        String sparqlQuery = "BASE <http://www.southgreen.fr/agrold/>\n"
+                + "PREFIX rdf:<http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n"
+                + "PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#>\n"
+                + "PREFIX graph:<"+graphLocalName+">\n"
+                + "\n"
+                + "SELECT distinct ?LocalName (?relation AS ?URI)\n"
+                + "WHERE { \n"
+                + " GRAPH graph: { \n"
+                + "  ?subject ?relation ?object . \n"
+                + "    BIND(REPLACE(str(?relation), '^.*(#|/)', \"\") AS ?LocalName)\n"
+                + " } \n"
+                + "} \n"
+                + "ORDER BY ?relation";
+        sparqlQuery = APILib.addLimitAndOffset(sparqlQuery, pageSize, page);
+        System.out.println(sparqlQuery);
+        return APILib.executeSparqlQuery(sparqlQuery, APILib.sparqlEndpointURL, resultFormat);
+    }
 
-        SparqlEndpoint sepAgrold = new SparqlEndpoint("http://volvestre.cirad.fr:8890/sparql");
-        ResultSet rs;
-        String sparqlq;
-        sparqlq = "select distinct ?p where { GRAPH ?g {\n"
-                + "    ?s ?p ?o\n"
-                + "  }\n"
-                + "FILTER (REGEX(?g, \"http://www.southgreen.fr/agrold/*\"))}";
-        rs = sepAgrold.select(sparqlq);
-        System.out.println(sparqlq);
-        List<String> varnames = rs.getResultVars();
-        for (; rs.hasNext();) {
-            QuerySolution soln = rs.nextSolution();
-            predicate = new Predicate(sepAgrold.convertitNoeudEnString(soln.get(varnames.get(0))));
-            predicates.add(predicate);
-        }
-        return predicates;
+    public static void main(String[] args) {
+        System.out.println(getPredicates("gramene.genes", 0, 10, ".json"));
     }
 }
